# Swallet

./: .gitignore  Makefile  README.md  Sig_rs.txt  bookmarks.json  coordinator  parties.config  party  vk.pem
PADW/: Makefile  README.md  parties.config  server  user
PADW/src/common/: config.c  crypto_utils.c  crypto_utils.h  network.c  network.h  params.c  params.h  time.c
PADW/src/server/: keygen.c  keygen.h  main.c  register.c  register.h  sign.c  sign.h
PADW/src/user/: keyDerivation.c  keyDerivation.h  keygen.c  keygen.h  main.c  register.c  register.h  sign.c  sign.h
Swallet/: README.md  Sig_rs.txt  coordinator  party  vk.pem
Swallet-Rust/: Cargo.toml  Makefile  README.md  config.json  coordinator  party
Swallet-Rust/src/: lib.rs
Swallet-Rust/src/common/: crypto_utils.rs  mod.rs  network.rs  params.rs
Swallet-Rust/src/coordinator/: keygen.rs  mod.rs  presign.rs  sign.rs
Swallet-Rust/src/party/: keygen.rs  presign.rs  sign.rs
Swallet/src/common/: crypto_utils.h  network.h  params.c  params.h  time.h
Swallet/src/coordinator/: keygen.c  keygen.h  main.c  presign.c  presign.h
Swallet/src/party/: keygen.c  keygen.h  main.c  presign.c  presign.h  sign.c  sign.h
src/common/: config.c  crypto_utils.c  network.c
src/coordinator/: keygen.c  main.c  sign.c  sign.h
src/party/: keygen.c  keygen.h  main.c  presign.c  presign.h  sign.c  sign.h
